--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
-theme: jekyll-theme-minimal
+theme: minima
 title: NZCN Homepage
 description: Bookmark this to keep an eye on my project updates!
-
