--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 theme: minima
 title: NZCN Homepage
 description: Bookmark this to keep an eye on my project updates!
+plugins:
+  - jekyll-remote-theme
+
+remote_theme: ngzhio/jekyll-theme-hamilton
